--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Victoria (Tori) McDonald"
+  name             : "Victoria McDonald"
   avatar           : "profile.png"
   bio              : "Storm Scientist - math, code, instruments, data, maps"
   location         : "Duwamish Land"
