--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Victoria McDonald"
   avatar           : "profile.png"
-  bio              : "Storm Scientist - math, code, instruments, data, maps"
+  bio              : "Storm Scientist"
   location         : "Duwamish Land"
-  employer         :
+  employer         : "University of Washington"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=IzHCwT8AAAAJ&hl=en"
   email            :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/vmcd"
   orcid            : "https://orcid.org/0000-0001-5432-1983"
   pinterest        :
   soundcloud       :
