--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Victoria McDonald"
   avatar           : "profile.png"
-  bio              : "Storm Scientist"
+  bio              : "Storm Scientist, PhD student in Atmospheric Science & Data Science at the University of Washington. Science team for the IMPACTS Field Campaign"
   location         : "Duwamish Land"
   employer         : "University of Washington"
   pubmed           : 
