--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Victoria McDonald"
   avatar           : "profile.png"
-  bio              : "Storm Scientist, PhD student in Atmospheric Science & Data Science at the University of Washington. Science team for the IMPACTS Field Campaign"
-  location         : "Duwamish Land"
+  bio              : "Storm Scientist, PhD student in Atmospheric Science & Data Science at UW. Science team for the IMPACTS Field Campaign"
+  location         : 
   employer         : "University of Washington"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=IzHCwT8AAAAJ&hl=en"
