--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Victoria McDonald"
   avatar           : "profile.png"
-  bio              : "Storm Scientist \n PhD student in Atmospheric Science & Data Science at UW \n Science team for the IMPACTS Field Campaign"
+  bio              : "Storm Scientist - PhD student in Atmospheric Science & Data Science at UW - Science team for the IMPACTS Field Campaign"
   location         : 
   employer         : "University of Washington"
   pubmed           : 
