--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,10 @@
 # main links links
 main:
+  - title: "Research"
+    url: /research/
+
   - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
+    url: /publications/  
     
   - title: "Portfolio"
     url: /portfolio/
@@ -17,6 +14,3 @@ main:
     
   - title: "CV"
     url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
