--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Victoria McDonald"
-  avatar           : "profile.png"
-  bio              : "Storm Scientist. PhD student in Atmospheric Science & Data Science at UW. Science team for the IMPACTS Field Campaign"
+  avatar           : "bio_photo.jpg"
+  bio              : "Storm Scientist. PhD student in Atmospheric Science at UW. Science team for the IMPACTS Field Campaign"
   location         : 
   employer         : "University of Washington"
   pubmed           : 
