--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Victoria McDonald"
-  avatar           : "bio_photo.jpg"
+  avatar           : "vm_estate.jpg"
   bio              : "Storm Scientist. PhD student in Atmospheric Science at UW. Science team for the IMPACTS Field Campaign"
   location         : 
   employer         : "University of Washington"
